--- a/index.html
+++ b/index.html
@@ -210,6 +210,9 @@
 
     // Returns an array of pairs: NFT image urls & a their description
     function getLatestNfts() {
+
+      // LIMIT TO 4 NFTs FOR SPACING TO LOOK GOOD!
+
       const dummyNFTs = [
         ['https://www.pinkvilla.com/imageresize/decoding_nfts_what_are_nfts_and_how_do_they_work_all_you_need_to_know.jpg?width=752&t=pvorg', 'Blue background, gold monkey'], 
         ['https://imageio.forbes.com/specials-images/imageserve/6170e01f8d7639b95a7f2eeb/Sotheby-s-NFT-Natively-Digital-1-2-sale-Bored-Ape-Yacht-Club--8817-by-Yuga-Labs/0x0.png?format=png&width=960', 'Orange background, gold monkey'], 
