--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
-  <link rel="shortcut icon" type="image/x-icon" href="favicons/favicon.ico"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="https://ethsf-pasta-science.github.io/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://ethsf-pasta-science.github.io/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://ethsf-pasta-science.github.io/favicons/favicon-16x16.png">
+  <link rel="shortcut icon" type="image/x-icon" href="https://ethsf-pasta-science.github.io/favicons/favicon.ico"/>
   <!-- Styles -->
   <link rel="stylesheet" type="text/css" href="main.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto Mono' rel='stylesheet'>
